Add python-multipart for Form support

--- a/templates/scan.html
+++ b/templates/scan.html
@@ -118,6 +118,8 @@
   <video id="camera" autoplay playsinline></video>
   <div id="scan-frame"></div> <!-- スキャン枠 -->
 </div>
+  <video id="camera" autoplay playsinline></video>
+  <div id="status">📖 スキャン待機中…</div>
   <div id="book-info"></div>
 
   <!-- 🔽 書評欄 -->
