Add python-multipart for Form support

--- a/templates/scan.html
+++ b/templates/scan.html
@@ -40,8 +40,8 @@
       top: 30%;
       left: 25%;
       width: 50%;
-      height: 40%;
-      border: 2px dashed #ff69b4;
+      height: 60%;
+      border: 1px dashed #ffffff;
       box-sizing: border-box;
       z-index: 10;
       pointer-events: none;
@@ -118,7 +118,6 @@
   <video id="camera" autoplay playsinline></video>
   <div id="scan-frame"></div> <!-- スキャン枠 -->
 </div>
-  <video id="camera" autoplay playsinline></video>
   <div id="status">📖 スキャン待機中…</div>
   <div id="book-info"></div>
 
