--- a/templates/scan.html
+++ b/templates/scan.html
@@ -37,12 +37,12 @@
     }
     #scan-frame {
       position: absolute;
-      top: 30%;
+      top: 40%;
       left: 25%;
       width: 50%;
-      height: 60%;
-      border: 1px dashed #ffffff;
-      box-sizing: border-box;
+      height: 50%;
+      border: 0.5px dashed #ffffff;
+      box-sizing: box;
       z-index: 10;
       pointer-events: none;
     }
