Add python-multipart for Form support

--- a/templates/scan.html
+++ b/templates/scan.html
@@ -37,12 +37,12 @@
     }
     #scan-frame {
       position: absolute;
-      top: 40%;
+      top: 20%;
       left: 25%;
       width: 50%;
       height: 50%;
       border: 0.5px dashed #ffffff;
-      box-sizing: box;
+      box-sizing: solid;
       z-index: 10;
       pointer-events: none;
     }
